--- a/public/stylesheets/components/main.scss
+++ b/public/stylesheets/components/main.scss
@@ -20,7 +20,7 @@
 
 .main__header {
   height: $s-header-height;
-  margin-top: -$s-header-height - 30px;
+  margin-top: -$s-header-height - 35px;
   margin-left: -30px;
   float: left;
   padding: 10px;
